# ocr-fundamentals

./: .gitignore  README.md  settings.gradle
apps/ocr-client/: README.md
apps/ocr-module/: README.md
paddleocr-djl/: README.md  build.gradle
paddleocr-djl/src/main/java/com/example/ocr/: OcrApplication.java
paddleocr-djl/src/main/resources/: application.yml
paddleocr-kie-pipeline/: README.md
paddleocr-kie-pipeline/apps/kie-client/: README.md  build.gradle  settings.gradle
paddleocr-kie-pipeline/apps/kie-module/: README.md  pyproject.toml
paddleocr-kie-pipeline/apps/kie-module/app/: main.py
paddleocr-kie-pipeline/apps/kie-module/app/api/v1/: api.py  ocr.py
paddleocr-kie-pipeline/apps/kie-module/app/schemas/: ocr.py
paddleocr-kie-pipeline/apps/kie-module/app/services/: ocr_service.py
paddleocr-onnx/: README.md
paddleocr-pipeline-kie/: .gitignore  README.md
paddleocr-pipeline-kie/apps/kie-client/src/main/resources/: application.properties
paddleocr-pipeline-kie/apps/kie-module/app/core/: config.py
paddleocr-pipeline-kie/apps/kie-module/models/: labels.txt
paddleocr-pipeline/apps/ocr-client/: build.gradle
paddleocr-pipeline/apps/ocr-client/src/main/resources/: application-prod.yml  application.yml
src/main/java/com/example/ocr/api/: ApiDocs.java
src/main/java/com/example/ocr/config/: OcrConfig.java
src/main/java/com/example/ocr/core/: AnalysisResult.java  AnalysisService.java
src/main/java/com/example/ocr/dto/: OcrResponse.java
src/main/resources/: application-dev.yml
tesseract-tess4j/: README.md
(+39 files in other folders)
