[project]
name = "kie-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.4",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "transformers>=5.3.0",
    "urllib3<2",
    "uvicorn>=0.42.0",
]
